[package]
name = "tokio-2568"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = ["mutex-tokio"]
mutex-futures = []
mutex-async-std = []
mutex-tokio = []
mutex-futures-intrusive = []
mutex-futures-intrusive-fair = ["mutex-futures-intrusive"]

[dependencies]
tokio = { version = "0.3", features = ["sync", "macros", "rt-multi-thread"] }
futures = "0.3"
async-std = "1.6"
async-trait = "0.1"
futures-intrusive = "0.4"